samples/_failures_safe/1761666071_0dc095_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d376f51.c: In function ‘main’:
./samples/SAFE/__tmp_9d376f51.c:156: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_9d376f51.c:155:17: error: expected declaration or statement at end of input
  155 |                 } else if
      |                 ^
./samples/SAFE/__tmp_9d376f51.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d376f51.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d376f51.c:155:17: error: expected declaration or statement at end of input
